 Changed: Introduced MutableAnnotationCollection which enforces that added and removed annotations are
          also mutable (so that when doing add/remove, you can safely cast to the mutable sub-interface.)
 Changed: Improved generics on APIs (MutableGroupAnnotation only contains MutableAnnotation, for instance.)

Version 0.5 (2014-05-01)

     New: DateInterpreterStorage for storage and retrieval of date interpreters.
     New: Added new interpreters for signed types.
     New: Added new interpreter for 16-bit and 128-bit IEEE754 binary floating point.
     New: Added new interpreters for dates and times:
        * C time_t values
        * Java time values
        * Windows NT FILETIME
        * Windows NT SYSTEMTIME
        * Windows OLE VT_DATE / PT_APPTIME
        * IBM Notes TIMEDATE
        * Mac OS X NSDate / CFDateRef
        * Mac OS classic dates
     New: Added accessory bar components which can go at the bottom of the viewer. One shows where you are
          in the viewer and allows entering a new offset and length to jump to. The other shows the selected
          value using a selected interpreter. A combined ExpandableAccessoryBar ties these together with UI
          to expand and collapse the bars.
     New: Value classes now know how to convert themselves to localised strings.

   Fixed: Fixed an issue where a *really* large binary would not let you mouse select past some point in the
          file despite keyboard navigation working as normal.

 Changed: The hex viewport now properly paints its border so that you can see where your focus is.
 Changed: Default colours now come from the UI defaults. Colours which are not in the UI defaults are
          derived from the TextArea defaults if no specific setting is present.
 Changed: Replaced InterpreterInfo#getHumanName method with a proper getLocalisedName which looks up from
          a resource bundle.